Fixed logging, better handling

--- a/settings.ini
+++ b/settings.ini
@@ -13,3 +13,6 @@ Map_browser_sleep=1
 Map_browser_timeout=5
 Timeleft_alert1=300
 Timeleft_alert2=60
+DebugFile=debug.log
+DebugLevel=30
+ReportTo=-1003247319884
